fix: resolve tasktable overflow issue

--- a/src/components/TasksTable/TasksTable.module.css
+++ b/src/components/TasksTable/TasksTable.module.css
@@ -10,7 +10,7 @@
   margin-bottom: 0.5rem;
 }
 .tasks {
-  max-height: 70vh;
+  max-height: 65vh;
   overflow: scroll;
 }
 .tasks::-webkit-scrollbar {
